[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Loading programs into the construct"
authors = ["adahadda"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = ">=2.1.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"